--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://use.typekit.net/tmu8jww.css">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
     <title>Journey</title>
   </head>
   <body>
