added script for tiny mce

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://use.typekit.net/tmu8jww.css">
-    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+    <script src="https://cdn.tiny.cloud/1/zz6qgaddhlvxbo2qhyr6egdacg5wpc8frh658nppxd7p6z7r/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Journey</title>
   </head>
   <body>
